Update landing page subtitle with line break

--- a/public/index.html
+++ b/public/index.html
@@ -573,8 +573,8 @@
   <div class="main-content">
     <h1 class="title">UMT GAME HUB</h1>
     <p class="subtitle">
-      School Code style portal to discover,
-      play, and manage mini games.
+      UMT's realtime gaming platform.<br>
+      Learn while you play, play while you learn!
     </p>
 
     <div class="buttons-container">
